# Agentic-ADK

./: .gitignore  NOTICE  README-langengine.md  README-mcp_CN.md  README.md  README_CN.md  pom.xml
ali-agentic-adk-frontend/: README.md  (+3 more)
ali-agentic-adk-python/: README.md  TODO.md  pyproject.toml  requirements.txt
ali-agentic-adk-python/docs/: module_overview.md
ali-agentic-adk-python/examples/app_call_demo/: agent.py
ali-agentic-adk-python/examples/app_call_test/: agent.py
ali-agentic-adk-python/examples/browser_use_demo/: agent.py  app.py  brain_agent.py  browser_use.py  config  runtime_example.py
ali-agentic-adk-python/examples/browser_use_test/: agent.py  brain_agent.py  browser_use.py  promt.py
ali-agentic-adk-python/examples/deep_research_demo/: agent.py  iterative_research.py
ali-agentic-adk-python/examples/multi_agent_demo/: __init__.py  team_collaboration.py
ali-agentic-adk-python/tests/: test_anthropic_embedding.py  test_aws_embedding.py  test_azure_openai_embedding.py  test_bailian_app_tool.py  test_bailian_embedding.py  test_cohere_embedding.py  test_dashscope_llm.py  test_deepseek_embedding.py  test_doubao_embedding.py  test_google_embedding.py  test_huggingface_embedding.py  test_jina_embedding.py  test_minimax_embedding.py  test_mistral_embedding.py  test_moonshot_embedding.py  test_ollama_embedding.py  test_openai_embedding.py  test_qianfan_embedding.py  test_runtime_models.py  test_sensenova_embedding.py  test_siliconflow_embedding.py  test_tencent_embedding.py  test_voyage_embedding.py  test_yi_embedding.py  test_zhipu_embedding.py
(+1571 files in other folders)
